--- a/chat.html
+++ b/chat.html
@@ -93,7 +93,7 @@
               <div class="card-heading">
 
                 <div class="card-image02">
-                    <img src="./assets/images/Chat01.png" alt="">
+                    <img src="./assets/images/chat01.png" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
@@ -108,10 +108,8 @@
                 </div>
 
                 <div class="card-image01">
-                    <img src="./assets/images/Chat02.png" alt="">
+                    <img src="./assets/images/chat02.png" alt="">
                 </div>
-
-                <span class="card-subtitle02">For this project, I focused on user flows, sketching, wireframing, and prototyping.</span>
 
                 <div class="section-subtitle-container01">
                     <h5 class="title section-subtitle">Wireframe</h5>
@@ -122,12 +120,21 @@
 
                 <span class="card-subtitle01">I've used a variety of messaging applications in the past, including WhatsApp, Telegram, Slack, and iMessage, so I had a basic grasp of how these apps were designed and the overall user path. For the app keyboard, I was able to use Apple's UI tool set.
                 </span>
-                <div class="card-image01">
-                    <img src="./assets/images/Chat03.png" alt="">
+
+                <div class="section-subtitle-container01">
+                  <h5 class="title section-subtitle">LOW-FIDELITY PROTOTYPES</h5>
                 </div>
 
                 <div class="card-image01">
-                    <img src="./assets/images/Chat.png" alt="">
+                    <img src="./assets/images/chat03.png" alt="">
+                </div>
+
+                <div class="section-subtitle-container01">
+                  <h5 class="title section-subtitle">HIGH-FIDELITY PROTOTYPES</h5>
+                </div>
+
+                <div class="card-image01">
+                    <img src="./assets/images/chat04.png" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
@@ -141,7 +148,7 @@
                 </span>
 
                 <div class="card-image01">
-                  <img src="./assets/images/Chat05.png" alt="">
+                  <img src="./assets/images/chat05.png" alt="">
                 </div>
                 
                 <div class="section-subtitle-container01">
@@ -152,7 +159,7 @@
                 </span>
 
                 <div class="card-image01">
-                  <img src="./assets/images/Chat07.png" alt="">
+                  <img src="./assets/images/chat06.png" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
@@ -165,15 +172,15 @@
                   being used.</span>
 
                 <div class="card-image01">
-                    <img src="./assets/images/Chat06.png" alt="">
+                    <img src="./assets/images/chat07.png" alt="">
                 </div>
 
                 <div class="card-image01">
-                  <img src="./assets/images/Chat08.png" alt="">
+                  <img src="./assets/images/chat08.png" alt="">
               </div>
 
                 <div class="section-subtitle-container01">
-                    <h5 class="title section-subtitle">Summary</h5>
+                    <h5 class="title section-subtitle">Reflection</h5>
                 </div>
 
                 <span class="card-subtitle01">My first goal for this project was to create a messaging software that felt natural in the user's hand. The app had to be constructed using UI toolkits and existing UI components that I had created.
