--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
           <div class="tech-stack-item" data-tooltip="Figma">
             <i class="bx bxl-figma"></i>
           </div>
+          <div class="tech-stack-item" data-tooltip="PHP">
+            <i class="bx bxl-php"></i>
+          </div>
         </div>
 
 
@@ -122,29 +125,40 @@
 
           <div class="portfolio-cards d-grid">
 
-            <a href="https://my.healtopedia.com/" class="portfolio-card portfolio-card-1">
+            <a href="healtopedia.html" class="portfolio-card portfolio-card-1">
               <div class="card-image">
-                <img src="./assets/images/healtopedia.png" alt="">
+                <img src="./assets/images/healtopedia01.png" alt="">
               </div>
               <div class="card-heading">
                 <h5 class="card-title">Healtopedia</h5>
-                <span class="card-subtitle">Web design & development</span>
-                <h6 class="card-subtitle">HTML CSS JS MYSQL PHP OneSignal</h6>
+                <span class="card-subtitle">Web Design & Development</span>
+                <h6 class="card-subtitle">UI/UX HTML CSS JS MYSQL PHP</h6>
               </div>
             </a>
 
-            <a href="https://alphacoretech.net/" class="portfolio-card portfolio-card-2">
+            <a href="silentmoon.html" class="portfolio-card portfolio-card-2">
               <div class="card-image">
-                <img src="./assets/images/alphacore.png" alt="">
+                <img src="./assets/images/silent01.png" alt="">
               </div>
               <div class="card-heading">
-                <h5 class="card-title">Alphacoretech</h5>
-                <span class="card-subtitle">Web design & development</span>
-                <h6 class="card-subtitle">ReactJS</h6>
+                <h5 class="card-title">Silent Moon</h5>
+                <span class="card-subtitle">Web Design & Development</span>
+                <h6 class="card-subtitle">UI & UX Research</h6>
               </div>
             </a>
 
-            <a href="https://web.fiv5s.com/#/" class="portfolio-card portfolio-card-3">
+            <a href="chat.html" class="portfolio-card portfolio-card-3">
+              <div class="card-image">
+                <img src="./assets/images/chat01.png" alt="">
+              </div>
+              <div class="card-heading">
+                <h5 class="card-title">Chat App</h5>
+                <span class="card-subtitle">Web Design & Development</span>
+                <h6 class="card-subtitle">UI & UX Research</h6>
+              </div>
+            </a>
+
+            <!-- <a href="https://web.fiv5s.com/#/" class="portfolio-card portfolio-card-3">
               <div class="card-image">
                 <img src="./assets/images/hi5.png" alt="">
               </div>
@@ -153,7 +167,7 @@
                 <span class="card-subtitle">Dashboard design & development</span>
                 <h6 class="card-subtitle">HTML CSS JS MYSQL PHP DOCKER</h6>
               </div>
-            </a>
+            </a> 
 
             <a href="https://samuraipaint.jp/" class="portfolio-card portfolio-card-4">
               <div class="card-image">
@@ -165,7 +179,7 @@
                 <h6 class="card-subtitle">HTML CSS JS MYSQL PHP DOCKER</h6>
               </div>
             </a>
-
+          
             <a href="https://www.srgasia.com.my/" class="portfolio-card portfolio-card-5">
               <div class="card-image">
                 <img src="./assets/images/srg.png" alt="">
@@ -175,12 +189,32 @@
                 <span class="card-subtitle">Web design & development</span>
                 <h6 class="card-subtitle">ReactJS</h6>
               </div>
-            </a>
+            </a> -->
+
+            <a href="alphacore.html" class="portfolio-card portfolio-card-4">
+              <div class="card-image">
+                <img src="./assets/images/alphacore01.png" alt="">
+              </div>
+              <div class="card-heading">
+                <h5 class="card-title">Alphacore</h5>
+                <span class="card-subtitle">Web design & development</span>
+                <h6 class="card-subtitle">HTML CSS JS React MYSQL PHP</h6>
+              </div>
+
+              <a href="wellous.html" class="portfolio-card portfolio-card-5">
+                <div class="card-image">
+                  <img src="./assets/images/wellous01.png" alt="">
+                </div>
+                <div class="card-heading">
+                  <h5 class="card-title">Wellous</h5>
+                  <span class="card-subtitle">Web design & development</span>
+                  <h6 class="card-subtitle">HTML CSS JS React MYSQL PHP</h6>
+                </div>
+            
 
             <div class="portfolio-card portfolio-card-6 large-button-container">
               <a href="project.html" class="large-button button-fill">
-                view
-                <br> All
+                More
               </a>
             </div>
           </div>
