--- a/project.html
+++ b/project.html
@@ -74,38 +74,49 @@
 
           <div class="portfolio-cards d-grid">
 
-            <a href="chat.html" class="portfolio-card portfolio-card-1">
+            <a href="https://www.srgasia.com.my/" class="portfolio-card portfolio-card-1">
               <div class="card-image">
-                <img src="./assets/images/Chat01.png" alt="">
+                <img src="./assets/images/srg01.png" alt="">
               </div>
               <div class="card-heading">
-                <h5 class="card-title">Chat App</h5>
+                <h5 class="card-title">SRG Asia Pacific</h5>
                 <span class="card-subtitle">UI/UX Design</span>
               </div>
             </a>
 
-            <a href="fitness.html" class="portfolio-card portfolio-card-2">
+            <a href="https://samuraipaint.jp/" class="portfolio-card portfolio-card-2">
               <div class="card-image">
-                <img src="./assets/images/fitness01.png" alt="">
+                <img src="./assets/images/samurai01.png" alt="">
               </div>
               <div class="card-heading">
-                <h5 class="card-title">Fitness Pro</h5>
+                <h5 class="card-title">Samurai Paint</h5>
                 <span class="card-subtitle">UI/UX Design</span>
               </div>
             </a>
 
-            <a href="silentmoon.html" class="portfolio-card portfolio-card-3">
+            <a href="https://jknjohor.moh.gov.my/hkotatinggi/" class="portfolio-card portfolio-card-3">
               <div class="card-image">
-                <img src="./assets/images/silent01.png" alt="">
+                <img src="./assets/images/hkt01.png" alt="">
               </div>
               <div class="card-heading">
                 <h5 class="card-title"></h5>
-                <h5 class="card-title">Silent Moon</h5>
+                <h5 class="card-title">Portal HKT</h5>
                 <span class="card-subtitle">UI/UX Design</span>
               </div>
             </a>
 
-            <a href="https://www.khaizan.com/" class="portfolio-card portfolio-card-4">
+            <a href="https://heartshaker.or.jp/" class="portfolio-card portfolio-card-4">
+              <div class="card-image">
+                <img src="./assets/images/heart01.png" alt="">
+              </div>
+             <div class="card-heading">
+                <h5 class="card-title">Heart Shaker</h5>
+                <span class="card-subtitle">Web design & development</span>
+                <h6 class="card-subtitle">HTML CSS JS</h6>
+              </div>
+            </a>
+
+            <a href="https://www.khaizan.com/" class="portfolio-card portfolio-card-5">
               <div class="card-image">
                 <img src="./assets/images/khaizan.png" alt="">
               </div>
@@ -116,7 +127,7 @@
               </div>
             </a>
 
-            <a href="https://sites.google.com/view/beyh/home" class="portfolio-card portfolio-card-5">
+            <a href="https://sites.google.com/view/beyh/home" class="portfolio-card portfolio-card-6">
               <div class="card-image">
                 <img src="./assets/images/beyh.png" alt="">
               </div>
@@ -127,7 +138,18 @@
               </div>
             </a>
 
-            <div class="portfolio-card portfolio-card-6 large-button-container">
+            <a href="" class="portfolio-card portfolio-card-7">
+              <div class="card-image">
+                <img src="./assets/images/404.png" alt="">
+              </div>
+             <div class="card-heading">
+                <h5 class="card-title">CottonDaddy</h5>
+                <span class="card-subtitle">Web design & development</span>
+                <h6 class="card-subtitle">HTML CSS JS</h6>
+              </div>
+            </a>
+
+            <div class="portfolio-card portfolio-card-8 large-button-container">
               <a href="index.html" class="large-button button-fill">
                 Home
                 <br>
