--- a/wellous.html
+++ b/wellous.html
@@ -90,12 +90,18 @@
                 </div>
             </a>
 
-            <a class="portfolio-card portfolio-card-01">
+            <a href="https://www.wellous.com/" class="portfolio-card portfolio-card-04">
               <div class="card-heading">
 
                 <div class="card-image01">
                     <img src="./assets/images/wellous01.png" alt="">
                 </div>
+
+              </div>
+            </a>
+
+            <a class="portfolio-card portfolio-card-01">
+              <div class="card-heading">
 
                 <div class="section-subtitle-container01">
                   <h5 class="title section-subtitle">what was the problem we were trying to solve?</h5>
