--- a/project.html
+++ b/project.html
@@ -94,7 +94,7 @@
               </div>
             </a>
 
-            <a href="https://jknjohor.moh.gov.my/hkotatinggi/" class="portfolio-card portfolio-card-3">
+           <!-- <a href="https://jknjohor.moh.gov.my/hkotatinggi/" class="portfolio-card portfolio-card-3">
               <div class="card-image">
                 <img src="./assets/images/hkt01.png" alt="">
               </div>
@@ -103,7 +103,7 @@
                 <h5 class="card-title">Portal HKT</h5>
                 <span class="card-subtitle">UI/UX Design</span>
               </div>
-            </a>
+            </a> -->
 
             <a href="https://heartshaker.or.jp/" class="portfolio-card portfolio-card-4">
               <div class="card-image">
@@ -116,7 +116,7 @@
               </div>
             </a>
 
-            <a href="https://www.khaizan.com/" class="portfolio-card portfolio-card-5">
+            <!-- <a href="https://www.khaizan.com/" class="portfolio-card portfolio-card-5">
               <div class="card-image">
                 <img src="./assets/images/khaizan.png" alt="">
               </div>
@@ -147,9 +147,9 @@
                 <span class="card-subtitle">Web design & development</span>
                 <h6 class="card-subtitle">HTML CSS JS</h6>
               </div>
-            </a>
+            </a> -->
 
-            <div class="portfolio-card portfolio-card-8 large-button-container">
+            <div class="portfolio-card portfolio-card-3 large-button-container">
               <a href="index.html" class="large-button button-fill">
                 Home
                 <br>
