--- a/healtopedia.html
+++ b/healtopedia.html
@@ -138,7 +138,7 @@
                 </span>
 
                 <div class="card-image01">
-                  <img src="./assets/images/404.png" alt="">
+                  <img src="./assets/images/healtopedia03.gif" alt="">
                 </div>
 
                 <span class="card-subtitle01"> 1. User Surveys: Conducting surveys among the target user groups to gather insights on their healthcare needs, preferences, and challenges. This can provide valuable data to inform the design and functionality of Healtopedia.
@@ -237,7 +237,7 @@
                 <span class="card-subtitle01">Discover a range of health screening services and packages offered by different hospitals on the website, and find the ones that suit your preferences.</span>
 
                 <div class="card-image01">
-                  <img src="./assets/images/404.png" alt="">
+                  <img src="./assets/images/healtopedia08.gif" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
@@ -247,7 +247,7 @@
                 <span class="card-subtitle01">If you find yourself overwhelmed with options, utilize our convenient Comparison feature to compare the details and services offered in multiple health screenings.</span>
 
                 <div class="card-image01">
-                  <img src="./assets/images/404.png" alt="">
+                  <img src="./assets/images/healtopedia09.gif" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
@@ -258,7 +258,7 @@
 
 
                 <div class="card-image01">
-                  <img src="./assets/images/404.png" alt="">
+                  <img src="./assets/images/healtopedia10.gif" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
@@ -269,7 +269,7 @@
 
 
                 <div class="card-image01">
-                  <img src="./assets/images/404.png" alt="">
+                  <img src="./assets/images/healtopedia11.gif" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
