--- a/silentmoon.html
+++ b/silentmoon.html
@@ -205,7 +205,7 @@
                 </div>
 
                 <div class="card-image01">
-                  <img src="./assets/images/404.png" alt="">
+                  <img src="./assets/images/silent12.gif" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
