--- a/alphacore.html
+++ b/alphacore.html
@@ -236,7 +236,7 @@
                 </span>
 
                 <div class="card-image01">
-                  <img src="./assets/images/404.png" alt="">
+                  <img src="./assets/images/alphacore09.gif" alt="">
                 </div>
 
                 <span class="card-subtitle01">
@@ -244,7 +244,7 @@
                 </span>
 
                 <div class="card-image01">
-                  <img src="./assets/images/404.png" alt="">
+                  <img src="./assets/images/alphacore10.gif" alt="">
                 </div>
 
                 <span class="card-subtitle01">
@@ -252,7 +252,7 @@
                 </span>
 
                 <div class="card-image01">
-                  <img src="./assets/images/404.png" alt="">
+                  <img src="./assets/images/alphacore11.gif" alt="">
                 </div>
 
                 <div class="section-subtitle-container01">
