--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <h6 class="card-subtitle">UI & UX Development</h6>
               </div>
 
-            <a href="silentmoon.html" class="portfolio-card portfolio-card-3">
+            <!-- <a href="silentmoon.html" class="portfolio-card portfolio-card-3">
               <div class="card-image">
                 <img src="./assets/images/silent01.png" alt="">
               </div>
@@ -162,9 +162,9 @@
                 <span class="card-subtitle">messaging app for effortless engagement.</span>
                 <h6 class="card-subtitle">UI Research</h6>
               </div>
-            </a>
+            </a> -->
             
-            <a href="heartshaker.html" class="portfolio-card portfolio-card-6">
+            <a href="heartshaker.html" class="portfolio-card portfolio-card-3">
               <div class="card-image">
                 <img src="./assets/images/heart01.png" alt="">
               </div>
@@ -175,7 +175,7 @@
               </div>
             </a>
 
-            <div class="portfolio-card portfolio-card-5 large-button-container">
+            <div class="portfolio-card portfolio-card-4 large-button-container">
               <a href="project.html" class="large-button button-fill">
                 More
               </a>
