--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
           <div class="scroll-reveal-left">
             <p class="description">
 
-              Hi! I'm <span class="text-bold">Muhamad Ariffudin</span>, a skilled <span class="text-bold">UI & UX developer</span> with a <span class="text-bold">software engineering</span> background. 
-              I specialize in creating <span class="text-bold">engaging and user-friendly</span> websites that bring <span class="text-bold">ideas to life.</span> 
-              I am dedicated to delivering exceptional results and ensuring <span class="text-bold">client satisfaction</span>. 
-              
+              Hi, I'm <span class="text-bold">Muhamad Ariffudin</span>, an experienced <span class="text-bold">UI & UX developer</span> with a <span class="text-bold">software engineering</span> background. 
+              I specialize in creating <span class="text-bold">user-friendly websites</span> that turn ideas into <span class="text-bold">reality</span>, 
+              I'm eager to join <span class="text-bold">your team</span> and can start <span class="text-bold">immediately</span>. 
+
               <br>PLEASE REVIEW MY "<a href="assets/resume/Muhamad Ariffudin .pdf" target="_blank" class="button"><span class="text-bold"><u>Resume</u></span></a>" for more details.
             </p>
           </div>
